K8S/Deployed/mssql-prod-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: mssql-depl-prod
spec:
    replicas: 1
    selector: 
        matchLabels:
            app: mssql-prod
    template: 
        metadata: 
            labels:
                app: mssql-prod
        spec: 
            containers: 
                - name: mssql-prod
                  image: mcr.microsoft.com/azure-sql-edge:latest
                  ports:
                    - containerPort: 1433
                  volumeMounts: 
                    - mountPath: /var/opt/mssql/data
                      name: mssqldb-prod
            volumes: 
                - name: mssqldb-prod
                  persistentVolumeClaim: 
                    claimName: mssql-claim-prod
---
apiVersion: v1
kind: Service
metadata:
    name: mssql-clusterip-prod
spec:
    type: ClusterIP
    selector:
        app: mssql-prod
    ports:
        - name: mssql-prod
          protocol: TCP
          port: 1434
          targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
    name: mssql-loadbalancer-prod
spec:
    type: LoadBalancer
    selector:
        app: mssql-prod
    ports:
         - protocol: TCP
           port: 1434
           targetPort: 1433
